--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "mcp>=1.9.1",
+    "mcp[cli]>=1.9.1",
+    "typer>=0.16.0",
     "wikipedia>=1.4.0",
     "wikipedia-api>=0.8.1",
 ]
